--- a/Basilisk/Inspector/Inspectors/HTTPInspector.storyboard
+++ b/Basilisk/Inspector/Inspectors/HTTPInspector.storyboard
@@ -80,7 +80,7 @@
                                     </textField>
                                 </subviews>
                                 <visibilityPriorities>
-                                    <real value="1000"/>
+                                    <integer value="1000"/>
                                     <integer value="1000"/>
                                 </visibilityPriorities>
                                 <customSpacing>
@@ -195,6 +195,9 @@
                                                     </prototypeCellViews>
                                                 </tableColumn>
                                             </tableColumns>
+                                            <connections>
+                                                <outlet property="menu" destination="rqr-KF-mPB" id="Qes-kM-AhE"/>
+                                            </connections>
                                         </tableView>
                                     </subviews>
                                     <nil key="backgroundColor"/>
@@ -249,7 +252,7 @@
                                                         <rect key="frame" x="1" y="1" width="348" height="298"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" findStyle="bar" smartInsertDelete="YES" id="YLe-I6-mIa">
+                                                            <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" smartInsertDelete="YES" id="YLe-I6-mIa">
                                                                 <rect key="frame" x="0.0" y="0.0" width="348" height="298"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -323,6 +326,22 @@
                     </connections>
                 </viewController>
                 <customObject id="lOA-Ae-pH0" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <menu id="rqr-KF-mPB">
+                    <items>
+                        <menuItem title="Copy Value" id="ZpL-fj-abk">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                            <connections>
+                                <action selector="copyValueOfClickedHeader:" target="Db4-KQ-lMO" id="Nw2-Fa-Z3b"/>
+                            </connections>
+                        </menuItem>
+                        <menuItem title="Copy Name &amp; Value" id="G35-T1-Jz2">
+                            <modifierMask key="keyEquivalentModifierMask"/>
+                            <connections>
+                                <action selector="copyNameAndValueOfClickedHeader:" target="Db4-KQ-lMO" id="U8C-gk-4QE"/>
+                            </connections>
+                        </menuItem>
+                    </items>
+                </menu>
             </objects>
             <point key="canvasLocation" x="182" y="192"/>
         </scene>
